# CW3_widget-account-transactions

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_get_by_date_and_cut.py  test_get_executed_operations.py  test_get_masked.py  test_get_transaction_objs.py  test_load_json.py
utils/: functions.py  my_class.py
