[tool.poetry]
name = "courseworks"
version = "0.1.0"
description = ""
authors = ["Valera Demin <wahrwolffe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.1"


[tool.poetry.group.develop.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
